syntax = "proto3";
package server;

import "server/pb_server_peer_bundle.proto";

enum PBServerError {
    UNKNOWN_ERROR = 0;
    CANNOT_DECODE_CLIENT_MESSAGE = 1;
    CLIENT_ALREADY_REGISTERED = 2;
    CLIENT_NOT_REGISTERED = 3;
    BAD_RESPONSE = 4;
}

enum PBServerCommand {
    ASK_FOR_REGISTRATION_BUNDLE = 0;
    ASK_FOR_NEW_SPK = 1;
    ASK_FOR_NEW_LAST_RESORT_PQKEM_PREKEY = 2;
    ASK_FOR_NEW_COPK = 3;
    ASK_FOR_NEW_PQOPK = 4;
}

message PBServerMessageData {
    oneof data {
        PBServerPeerBundle peer_bundle = 1;
    }
}

message PBServerMessage {
    oneof message {
        bool ok = 1;
        PBServerError error = 2;
        PBServerCommand command = 3;
        PBServerMessageData data = 4;
    }
}